MISC: fix 3.12 build
MISC

MISC

FIX??

and now ??

NOw ?

more ?

fix depend

lastone

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -18,11 +18,16 @@ OBJEXT := .o
 LIBEXT := .a
 DLLEXT := .so
 
-### Optional dependencies: deriving
+ifeq ($(shell ocamlc -v | grep -q "version 4"; echo $$?),0)
+OCAML4:="YES"
+endif
 
+### Optional dependencies: deriving
 WITH_DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
 
+ifeq ($(OCAML4),"YES")
 WITH_GRAPHICS := $(shell ocamlfind query graphics 2> /dev/null)
+endif
 
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
