Misc: reorganize the doc directory

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -19,17 +19,17 @@ endif
 
 
 .PHONY: doc docwiki
-doc: api-html/index.html
-api-html/index.html: ${MLIS} api-index
-	mkdir -p api-html
-	ocamlfind ocamldoc -package lwt,ocamlbuild ${OTHER} -intro api-index -html \
-	   -d api-html -I ../lib -I ../lib/deriving_json ${MLIS}
+doc: api/html/index.html
+api/html/index.html: ${MLIS} api/index
+	mkdir -p api/html
+	ocamlfind ocamldoc -package lwt,ocamlbuild ${OTHER} -intro api/index -html \
+	   -d api/html -I ../lib -I ../lib/deriving_json ${MLIS}
 
-docwiki: api-wiki/index.wiki cp-examples
-api-wiki/index.wiki: ${MLIS} api-index
-	mkdir -p api-wiki
-	ocamlfind ocamldoc -package lwt,ocamlbuild ${OTHER} -intro api-index \
-	   -d api-wiki -I ../lib -I ../lib/deriving_json -I ../lib/syntax \
+docwiki: api/wiki/index.wiki cp-examples
+api/wiki/index.wiki: ${MLIS} api/index
+	mkdir -p api/wiki
+	ocamlfind ocamldoc -package lwt,ocamlbuild ${OTHER} -intro api/index \
+	   -d api/wiki -I ../lib -I ../lib/deriving_json -I ../lib/syntax \
 	   -i $(shell ocamlfind query wikidoc) -g odoc_wiki.cma \
 	   ${MLIS}
 
@@ -46,17 +46,17 @@ EX_CUBE:=index.html cubes.js
 
 cp-examples:
 	$(MAKE) -C .. toplevel examples
-	mkdir -p ${addprefix manual-aux/, toplevel/ boulderdash/ webgl/ graph_viewer/ planet/ wiki/ wysiwyg/ minesweeper/ cubes/ hyperbolic/}
-	cp -R ${addprefix ../toplevel/, ${EX_TOPLEVEL}} manual-aux/toplevel/
-	cp -R ${addprefix ../examples/boulderdash/, ${EX_BOULDER}} manual-aux/boulderdash/
-	cp -R ${addprefix ../examples/webgl/, ${EX_WEBGL}} manual-aux/webgl/
-	cp -R ${addprefix ../examples/graph_viewer/, ${EX_GRAPH}} manual-aux/graph_viewer/
-	cp -R ${addprefix ../examples/planet/, ${EX_PLANET}} manual-aux/planet/
-	cp -R ${addprefix ../examples/wiki/, ${EX_WIKI}} manual-aux/wiki/
-	cp -R ${addprefix ../examples/wysiwyg/, ${EX_WYSIWYG}} manual-aux/wysiwyg/
-	cp -R ${addprefix ../examples/minesweeper/, ${EX_MINE}} manual-aux/minesweeper/
-	cp -R ${addprefix ../examples/cubes/, ${EX_CUBE}} manual-aux/cubes/
-	cp -R ${addprefix ../examples/hyperbolic/, ${EX_HYPER}} manual-aux/hyperbolic/
+	mkdir -p ${addprefix manual/files/, toplevel/ boulderdash/ webgl/ graph_viewer/ planet/ wiki/ wysiwyg/ minesweeper/ cubes/ hyperbolic/}
+	cp -R ${addprefix ../toplevel/, ${EX_TOPLEVEL}} manual/files/toplevel/
+	cp -R ${addprefix ../examples/boulderdash/, ${EX_BOULDER}} manual/files/boulderdash/
+	cp -R ${addprefix ../examples/webgl/, ${EX_WEBGL}} manual/files/webgl/
+	cp -R ${addprefix ../examples/graph_viewer/, ${EX_GRAPH}} manual/files/graph_viewer/
+	cp -R ${addprefix ../examples/planet/, ${EX_PLANET}} manual/files/planet/
+	cp -R ${addprefix ../examples/wiki/, ${EX_WIKI}} manual/files/wiki/
+	cp -R ${addprefix ../examples/wysiwyg/, ${EX_WYSIWYG}} manual/files/wysiwyg/
+	cp -R ${addprefix ../examples/minesweeper/, ${EX_MINE}} manual/files/minesweeper/
+	cp -R ${addprefix ../examples/cubes/, ${EX_CUBE}} manual/files/cubes/
+	cp -R ${addprefix ../examples/hyperbolic/, ${EX_HYPER}} manual/files/hyperbolic/
 
 clean:
-	-rm -rf api-html/* api-wiki/*
+	-rm -rf api/html/* api/wiki/*
