--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,6 +8,8 @@ LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
 MINIFIER := jsoo_minify$(EXEEXT)
+MKTOP    := jsoo_mktop$(EXEEXT)
+MKCMIS   := jsoo_mkcmis$(EXEEXT)
 # opt/byte
 BEST := opt
 
