--- a/jsoo_tools/Makefile
+++ b/jsoo_tools/Makefile
@@ -1,3 +1,6 @@
+include ../Makefile.conf
+-include ../Makefile.local
+
 all: $(MKTOP) $(MKCMIS)
 
 $(MKTOP): jsoo_mktop.$(BEST)
@@ -6,22 +9,36 @@ $(MKCMIS): jsoo_mkcmis.$(BEST)
 	mv -f $< $@
 
 byte: jsoo_mkcmis.byte jsoo_mktop.byte
-native: jsoo_mkcmis.native jsoo_mktop.native
+opt: jsoo_mkcmis.opt jsoo_mktop.opt
 
-%.byte: %.ml ../compiler/local/compiler.cma
-	ocamlfind ocamlc -linkpkg \
-	-package compiler-libs.common,findlib \
-	-I ../compiler/local/ compiler.cma \
-	$*.ml -o $*.byte
+%.cmo: %.ml
+%.cmx: %.ml
+jsoo_mk%.cmo: jsoo_common.cmo
+jsoo_mk%.cmx: jsoo_common.cmx
 
-%.native: %.ml ../compiler/local/compiler.cma
-	ocamlfind ocamlopt -linkpkg \
+%.byte: ../compiler/local/compiler.cma jsoo_common.cmo%.cmo
+	ocamlfind ocamlc -linkpkg -g \
 	-package compiler-libs.common,findlib \
-	-I ../compiler/local/ compiler.cmxa \
-	$*.ml -o $*.native
+	$^ -o $*.byte
+
+%.opt: ../compiler/local/compiler.cmxa jsoo_common.cmx %.cmx
+	ocamlfind ocamlopt -linkpkg -g \
+	-package compiler-libs.common,findlib \
+	$^ -o $*.opt
+
+%.cmo: %.ml
+	ocamlfind ocamlc -c -g \
+	-package compiler-libs.common,findlib \
+	-I ../compiler/local/ $<
+
+%.cmx: %.ml
+	ocamlfind ocamlopt -c -g \
+	-package compiler-libs.common,findlib \
+	-I ../compiler/local/ $<
 
 ../compiler/local/compiler.cma:
 	$(MAKE) -C ../compiler local/compiler.cma
+../compiler/local/compiler.cmxa: ../compiler/local/compiler.cma
 
 clean:
-	rm -f *.cm[xioa] *.[ao] *.so *.cmx[sa] *.{byte,native}
+	rm -f *.cm[xioa] *.[ao] *.so *.cmx[sa] *.{byte,opt}
